# mocap_optitrack

./: README.md
config/: diego-config.yaml  drone2_airlab.yaml  drones_mavlab.yaml  hovergames.yaml  iros-partition-2023.yaml  mocap-iros-partition-2023.yaml  mocap.yaml  mocap_ardrone2.yaml  mocap_jackal.yaml  mocap_obstacle.yaml  robot_tracking.yaml
include/mocap_optitrack/: optitrack_remap.h
launch/: drone2_airlab.launch  drones_mavlab.launch  hovergames.launch  hovergames_log.launch  mocap.launch  mocap_ardrone2.launch  mocap_jackal.launch  mocap_obstacle.launch
src/: CMakeLists.txt  mocap_config.cpp  mocap_node.cpp  optitrack_remap.cpp  remap_node.cpp
